[build-system]
requires = ["hatchling>=1.4", "jupyter_client>=6", "jupyterlab>=4.2.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "dfnotebook"
description = "Dataflow Python Kernel for Jupyter"
authors = [
    {name = "Dataflow Notebook Development Team", email = "dataflownb@users.noreply.github.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Dataflow", "Jupyter", "Kernel", "Python"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = {Homepage = "https://github.com/dataflownb/dfkernel"}
dependencies = [
    'ipython>=7.17.0',
    'traitlets>=4.1.0',
    'jupyter_client>=6.1.12',
    'jupyter_core>=4.12,!=5.0.*',
    'tornado>=6.1',
    'pyzmq>=24',
    'psutil',
    'ipykernel>=6',
    'notebook>=5.0',
    'nest_asyncio>=1.4',
    "dfnbutils",
    'packaging',
    'jupyterlab >= 4.2'
]
dynamic=["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
path = "kernel/dfkernel/_version.py"
source = "nodejs"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec" = "share/jupyter/kernels/dfpython3"

[tool.hatch.build.force-include]
".kernel/dfkernel_launcher.py" = "dfkernel_launcher.py"

[tool.check-wheel-contents]
toplevel = ["kernel/dfkernel/", "dfkernel_launcher.py"]
ignore = ["W002"]

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["dfnotebook/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"dfnotebook/labextension" = "share/jupyter/labextensions/@dfnotebook/dfnotebook-extension"
"install.json" = "share/jupyter/labextensions/@dfnotebook/dfnotebook-extension/install.json"

[tool.hatch.build.hooks.version]
path = "dfnotebook/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "dfnotebook/labextension/static/style.js",
    "dfnotebook/labextension/package.json",
]
skip-if-exists = ["dfnotebook/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = ["jlpm"]
source_dir = "packages"
build_dir = "dfnotebook/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]
