[metadata]
name = dfmain
version = 0.1.0
description = dfnotebook extension
author = Dataflow Notebook Team
author_email = dataflownb@users.noreply.github.com
license = MIT

[options]
packages = find:
include_package_data = True
install_requires =
    # Any shared dependencies can go here.

[options.packages.find]
where = .
