[build-system]
requires = [
    "hatchling>=1.4.0",
    "jupyterlab>=3.4.7,<4.0.0",
    "hatch-nodejs-version"
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build]
artifacts = ["dfnotebook-extension/labextension"]

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel.shared-data]
"dfnotebook-extension/labextension" = "share/jupyter/labextensions/@dfnotebook/dfnotebook-extension"
"install.json" = "share/jupyter/labextensions/@dfnotebook/dfnotebook-extension/install.json"

[tool.hatch.build.hooks.version]
path = "dfnotebook-extension/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.5",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "dfnotebook-extension/labextension/static/style.js",
    "dfnotebook-extension/labextension/package.json",
]
skip-if-exists = [
    "dfnotebook-extension/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "dfnotebook-extension/labextension"
build_cmd = "install:extension"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "0.1.0b0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[project]
name = "dfnotebook-extension"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "dfkernel @ git+https://github.com/dataflownb/dfkernel.git@9005725016811c44602c21ccc782d31e74a076b7"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]
